...
                android:layout_weight="1"
                android:layout_margin="@dimen/dim_8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:id="@+id/ll_menu_movil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
...
                android:layout_weight="1"
                android:layout_margin="@dimen/dim_8dp"
                app:cardCornerRadius="4dp"
                app:contentPadding="8dp"
                app:cardElevation="4dp">
                <LinearLayout
                    android:id="@+id/ll_menu_fijo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatImageView
...
