<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login"
    android:id="@+id/v_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dim_16dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/icon_login"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dim_16dp"
                android:paddingBottom="@dimen/dim_16dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8dp"
                    android:hint="Email:"
                    android:textColorHint="@android:color/white"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/white">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_usuario"
                        style="@style/input_form"
                        android:layout_marginBottom="@dimen/dim_8dp"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8dp"
                    android:hint="Password:"
                    android:textColorHint="@android:color/white"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/white">
                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_password"
                        style="@style/input_form"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_ingresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/btn_primary"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dim_16dp"
                    android:text="Ingresar"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/dim_8dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_olvide_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="Olvide mi contraseña"/>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:layout_centerInParent="true"
            android:src="@drawable/logotipo_white" />
    </LinearLayout>

</RelativeLayout>